# mcp-server-demo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  databricks.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yaml  config.yaml  feature.yaml
.github/workflows/: auto-assign-on-comment.yaml  auto-assign-on-comment.yml  unit_tests.yml
dev/: lint.sh
examples/custom-server/: .gitignore  README.md  app.yaml  databricks.yml  pyproject.toml  requirements.txt
examples/custom-server/hooks/: apps_build.py
examples/custom-server/src/custom_server/: __init__.py  app.py  main.py
examples/custom-server/src/custom_server/static/: index.html
hooks/: apps_build.py
servers/developer_tools/: README.md
servers/unity_catalog/: LICENSE  README.md  pyproject.toml
servers/unity_catalog/src/unitycatalog_mcp/: __init__.py  __main__.py  cli.py  server.py  version.py
servers/unity_catalog/src/unitycatalog_mcp/tools/: __init__.py  functions.py  genie.py  vector_search.py
servers/unity_catalog/tests/: conftest.py  test_cli.py  test_functions.py  test_genie.py  test_vector_search.py
src/databricks/labs/: __init__.py
src/databricks/labs/mcp/: base.py  utils.py
src/databricks/labs/mcp/servers/developer_tools/: README.md
src/databricks/labs/mcp/servers/unity_catalog/: README.md  __init__.py  __main__.py  app.py  cli.py  server.py
src/databricks/labs/mcp/servers/unity_catalog/tools/: __init__.py  base_tool.py  functions.py  genie.py  vector_search.py
src/databricks/labs/mcp/static/: index.html
tests/: conftest.py  test_cli.py  test_functions.py  test_genie.py  test_vector_search.py
